--- a/01.04. Actividad 1/html5.html
+++ b/01.04. Actividad 1/html5.html
@@ -17,5 +17,13 @@
                 <li><a href="index.html">Inicio</a></li>
             </ul>
         </nav>
+        <main>
+            <p>Aquí se añade el texto principal que queremos que aparezca en la 
+                página web
+            </p>
+        </main>
+        <footer>
+            <p>2019. Créditos. Contacto</p>
+        </footer>
     </body>
 </html>
