--- a/01.04. Actividad 2/Horario.html
+++ b/01.04. Actividad 2/Horario.html
@@ -9,7 +9,7 @@
     <body>
       <h1>Horario del curso</h1>
       <p>2ºDAW</p>
-      <p>01/10/2019</p>
+      <time>01/10/2019</time>
        <table border=1>
          <tr>
                 <th>Lunes</th>
