--- a/01.04. Actividad de refuerzo 2/HMTLFORM.html
+++ b/01.04. Actividad de refuerzo 2/HMTLFORM.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <main>
-        <form action="#" method="get">
+        <form action="#" >
             <h1>Pide lo que te apetezca</h1>
             <ul>
                 <li>Hamburguesa completa: <input type="text" name="" id="" value="0"> </li>
@@ -17,9 +17,22 @@
             </ul>
             <br>
                 <p>Escribe las modificaciones o preferencias sobre el pedido</p>
-                <textarea name="" id="" cols="30" rows="10" placeholder="Si el pepinillo no es para ti dínoslo">
-                </textarea>
-            <hr>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Si el pepinillo no es para ti dínoslo"></textarea>
+            
+        </form>
+        <hr>
+        <form action="#" >
+            <h2>Datos de contacto</h2>
+            Nombre: <br>
+            <input type="text" name="" id=""><br>
+            Nombre: <br>
+            <input type="text" name="" id=""><br>
+            Nombre: <br>
+            <input type="text" name="" id=""><br>
+            Nombre: <br>
+            <input type="text" name="" id=""><br>
+            Nombre: <br>
+            <input type="select" name="" id=""><br>
         </form>
     </main>
 </body>
