--- a/01.04. Actividad de refuerzo 2/HMTLFORM.html
+++ b/01.04. Actividad de refuerzo 2/HMTLFORM.html
@@ -24,15 +24,25 @@
         <form action="#" >
             <h2>Datos de contacto</h2>
             Nombre: <br>
+            <input type="text" name="" id="" placeholder="Nombre"><br>
+            Apellidos: <br>
+            <input type="text" placeholder="Apellidos" id=""><br>
+            Teléfono: <br>
+            <input type="text" placeholder="teléfono" id=""><br>
+            Correo electrónico: <br>
             <input type="text" name="" id=""><br>
-            Nombre: <br>
-            <input type="text" name="" id=""><br>
-            Nombre: <br>
-            <input type="text" name="" id=""><br>
-            Nombre: <br>
-            <input type="text" name="" id=""><br>
-            Nombre: <br>
-            <input type="select" name="" id=""><br>
+            ¿eres mayor de edad?: 
+             <select>
+              <option >No</option>
+              <option>Si</option>
+            </select>
+            <hr>
+                <input type="checkbox" checked="checked" id="">Quiero recibir información sobre ofertas
+                <br>
+                <input type="checkbox"  id="">Acepto las condiciiones del uso del servicio
+            <hr>
+            <input type="reset" value="Borrar">
+            <input type="submit" value="Enviar">
         </form>
     </main>
 </body>
