--- a/01.04. Actividad de refuerzo 2/HMTLFORM.html
+++ b/01.04. Actividad de refuerzo 2/HMTLFORM.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <main>
-        <form action="#" >
+        <form action="pedidos@hamburguerseria.com" >
             <h1>Pide lo que te apetezca</h1>
             <ul>
                 <li>Hamburguesa completa: <input type="text" name="" id="" value="0"> </li>
@@ -24,13 +24,13 @@
         <form action="#" >
             <h2>Datos de contacto</h2>
             Nombre: <br>
-            <input type="text" name="" id="" placeholder="Nombre"><br>
+            <input type="text" name="" id="" placeholder="Nombre" autocomplete="on"><br>
             Apellidos: <br>
-            <input type="text" placeholder="Apellidos" id=""><br>
+            <input type="text" placeholder="Apellidos" id="" autocomplete="on"><br>
             Teléfono: <br>
-            <input type="text" placeholder="teléfono" id=""><br>
+            <input type="text" placeholder="teléfono" id="" autocomplete="on"><br>
             Correo electrónico: <br>
-            <input type="text" name="" id=""><br>
+            <input type="text" autocomplete="on" name="" id=""><br>
             ¿eres mayor de edad?: 
              <select>
               <option >No</option>
