--- a/DIWEB/01.04. Actividad de refuerzo 2/HMTLFORM.html
+++ b/DIWEB/01.04. Actividad de refuerzo 2/HMTLFORM.html
@@ -9,10 +9,10 @@
         <form action="pedidos@hamburguerseria.com" >
             <h1>Pide lo que te apetezca</h1>
             <ul>
-                <li>Hamburguesa completa: <input type="text" name="" id="" value="0"> </li>
-                <li>Hamburguesa de pollo: <input type="text" name="" id="" value="0"></li>
-                <li>Hamburguesa vegetariana: <input type="text" name="" id="" value="0"></li>
-                <li>Hamburguesa doble: <input type="text" name="" id="" value="0"></li>
+                <li>Hamburguesa completa: <input type="number" max="10" min="0" id="" > </li>
+                <li>Hamburguesa de pollo: <input type="number" max="10" min="0" value="0"></li>
+                <li>Hamburguesa vegetariana: <input type="number" max="10" min="0" value="0"></li>
+                <li>Hamburguesa doble: <input type="number" max="10" min="0" value="0"></li>
                 
             </ul>
             <br>
@@ -24,13 +24,13 @@
         <form action="#" >
             <h2>Datos de contacto</h2>
             Nombre: <br>
-            <input type="text" name="" id="" placeholder="Nombre" autocomplete="on"><br>
+            <input type="text" max="10" min="0" name="" id="" placeholder="Nombre" autocomplete="on" required><br>
             Apellidos: <br>
-            <input type="text" placeholder="Apellidos" id="" autocomplete="on"><br>
+            <input type="text" placeholder="Apellidos"  id="" autocomplete="on" required><br>
             Teléfono: <br>
-            <input type="text" placeholder="teléfono" id="" autocomplete="on"><br>
+            <input type="text" placeholder="teléfono" id=""  autocomplete="on" required><br>
             Correo electrónico: <br>
-            <input type="text" autocomplete="on" name="" id=""><br>
+            <input type="text" autocomplete="on" name="" id="" required><br>
             ¿eres mayor de edad?: 
              <select>
               <option >No</option>
@@ -39,7 +39,7 @@
             <hr>
                 <input type="checkbox" checked="checked" id="">Quiero recibir información sobre ofertas
                 <br>
-                <input type="checkbox"  id="">Acepto las condiciiones del uso del servicio
+                <input type="checkbox"  id="" required>Acepto las condiciiones del uso del servicio
             <hr>
             <input type="reset" value="Borrar">
             <input type="submit" value="Enviar">
