--- a/DIWEB/01.04. Actividad de refuerzo 2/HMTLFORM.html
+++ b/DIWEB/01.04. Actividad de refuerzo 2/HMTLFORM.html
@@ -9,7 +9,7 @@
         <form action="pedidos@hamburguerseria.com" >
             <h1>Pide lo que te apetezca</h1>
             <ul>
-                <li>Hamburguesa completa: <input type="number" max="10" min="0" id="" > </li>
+                <li>Hamburguesa completa: <input type="number" max="10" min="0" value="0" id="" > </li>
                 <li>Hamburguesa de pollo: <input type="number" max="10" min="0" value="0"></li>
                 <li>Hamburguesa vegetariana: <input type="number" max="10" min="0" value="0"></li>
                 <li>Hamburguesa doble: <input type="number" max="10" min="0" value="0"></li>
