update html final

--- a/DIWEB/01.04. Actividad de refuerzo 2/HMTLFORM.html
+++ b/DIWEB/01.04. Actividad de refuerzo 2/HMTLFORM.html
@@ -30,7 +30,7 @@
             Teléfono: <br>
             <input type="text" placeholder="teléfono" id=""  autocomplete="on" required><br>
             Correo electrónico: <br>
-            <input type="mail" autocomplete="on" name="" id="" required><br>
+            <input type="email" autocomplete="on" name="" id="" required><br>
             ¿eres mayor de edad?: 
              <select>
               <option >No</option>
