--- a/DIWEB/01.04. Actividad de refuerzo 2/HMTLFORM.html
+++ b/DIWEB/01.04. Actividad de refuerzo 2/HMTLFORM.html
@@ -39,7 +39,7 @@
             <hr>
                 <input type="checkbox" checked="checked" id="">Quiero recibir información sobre ofertas
                 <br>
-                <input type="checkbox"  id="" required>Acepto las condiciiones del uso del servicio
+                <input type="checkbox"  id="" required>Acepto las condiciones del uso del servicio
             <hr>
             <input type="reset" value="Borrar">
             <input type="submit" value="Enviar">
