--- a/JS/3EnRayaPorSilverio/tablero.html
+++ b/JS/3EnRayaPorSilverio/tablero.html
@@ -5,8 +5,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
+        <script src="3enRaya.js">
+        </script>
     </head>
-    <body>
-        
+    <body id="Tablero" onload="dibujarTablero()">
+        <div ></div>
     </body>
 </html>
