--- a/DIWEB/CSS/02.01. Actividad 1/Index.html
+++ b/DIWEB/CSS/02.01. Actividad 1/Index.html
@@ -18,14 +18,14 @@
         </h1>
         <nav>
             <ul>
-                <li class="navegacion"><a href="#" lang="en-GB" rel="alternate">Noticias</a></li>
-                <li class="navegacion"><a href="#" lang="es-ES" rel="next">Otras noticias</a></li>
-                <li class="navegacion"><a href="#" lang="es-ES" rel="tag">Tienda</a></li>
-                <li class="navegacion"><a href="#" lang="es-ES" rel="bookmark">Productos destacados</a></li>
-                <li class="navegacion"><a href="#" lang="es-ES" rel="help">Ayuda</a></li>
-                <li class="navegacion"><a href="#" lang="es-ES">Ayuda Avanzada</a></li>
-                <li class="navegacion"><a href="#" lang="es-ES" rel="search">Búsqueda de productos</a></li>
-                <li class="navegacion"><a href="#" lang="en-AU" rel="nofollow">Documento interno secreto</a></li>
+                <li class="navegacion"><a href="noticas.html" lang="en-GB" rel="alternate">Noticias Brexit</a></li>
+                <li class="navegacion"><a href="otrasNoticias.html" lang="es-ES" rel="next">Otras noticias</a></li>
+                <li class="navegacion"><a href="tienda.html" lang="es-ES" rel="tag">Tienda</a></li>
+                <li class="navegacion"><a href="productos.html" lang="es-ES" rel="bookmark">Productos destacados</a></li>
+                <li class="navegacion"><a href="ayuda.html" lang="es-ES" rel="help">Ayuda</a></li>
+                <li class="navegacion"><a href="ayudaAvanzada.html" lang="es-ES">Ayuda Avanzada</a></li>
+                <li class="navegacion"><a href="Buscar.html" lang="es-ES" rel="search">Búsqueda de productos</a></li>
+                <li class="navegacion"><a href="secreto.html" lang="en-AU" rel="nofollow">Documento interno secreto</a></li>
             </ul>
         </nav>
     </header>
