--- a/DIWEB/HTML/Ejercicio Página web/htmlPrincipal.html
+++ b/DIWEB/HTML/Ejercicio Página web/htmlPrincipal.html
@@ -36,7 +36,7 @@
             <input type="button" value="Buscar">
         </div>
         
-        <div id="CategoriasJuegos">
+        <aside id="CategoriasJuegos">
             Categorías de juegos
             <ul>
                 <li>Terror</li>
@@ -45,7 +45,7 @@
                 <li>Aventuras</li>
                 <li>Lucha</li>
             </ul>
-        </div>
+        </aside>
     </section>
     <section >
         <div id="juegosComprados">
