--- a/DIWEB/CSS/02.01. Actividad 1/Index.html
+++ b/DIWEB/CSS/02.01. Actividad 1/Index.html
@@ -18,7 +18,7 @@
         </h1>
         <nav>
             <ul>
-                <li class="navegacion"><a href="noticas.html" lang="en-GB" rel="alternate">Noticias Brexit</a></li>
+                <li class="navegacion"><a href="noticas.html" lang="en-GB" rel="alternate">Noticias</a></li>
                 <li class="navegacion"><a href="otrasNoticias.html" lang="es-ES" rel="next">Otras noticias</a></li>
                 <li class="navegacion"><a href="tienda.html" lang="es-ES" rel="tag">Tienda</a></li>
                 <li class="navegacion"><a href="productos.html" lang="es-ES" rel="bookmark">Productos destacados</a></li>
