--- a/DIWEB/CSS/02.02.Actividad 2/html.html
+++ b/DIWEB/CSS/02.02.Actividad 2/html.html
@@ -10,8 +10,9 @@
     <nav>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt tempore possimus asperiores minus odio id numquam accusamus beatae voluptas optio.</nav>
     <section>
         <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, in?</article>
-        <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, velit.</article>
-        <aside>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, obcaecati autem! Officia ipsam quasi maiores minus corporis excepturi et labore, magni pariatur id dignissimos eius vero, eos fugiat unde quas ut cupiditate, alias adipisci omnis incidunt obcaecati! Delectus minus iusto harum in, nostrum incidunt asperiores magnam corporis enim. Corporis quibusdam ad, minus provident nam dolorem quo in accusamus exercitationem dolorum?</aside>
+       <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, velit.</article>
+        <aside>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, obcaecati autem! Officia ipsam quasi maiores minus corporis excepturi et labore, magni pariatur id dignissimos eius vero, eos fugiat unde quas ut cupiditate, alias adipisci omnis incidunt obcaecati! Delectus minus iusto harum in</aside>
+         
     </section>
     <footer>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum reiciendis incidunt impedit fuga dignissimos laudantium, earum nihil repudiandae ipsam nesciunt.</footer>
 </body>
