--- a/DIWEB/CSS/02.02. Actividad de refuerzo 1/Tarea_07_CSSGrid_Layout_02.html
+++ b/DIWEB/CSS/02.02. Actividad de refuerzo 1/Tarea_07_CSSGrid_Layout_02.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Dioses Primigenios y Tintín </title>
-    <style>
-        @import url("tarea07/css/style.css");
-        @import url("tarea07/css/Tarea_07_CSSGrid_Layout.css");
-    </style>
+   
+    <link rel="stylesheet" href="tarea07/css/style.css">
+    
 </head>
 
 <body>      
