--- a/DIWEB/CSS/Transformaciones/ejemplo css efecto parallas/ejemplo.html
+++ b/DIWEB/CSS/Transformaciones/ejemplo css efecto parallas/ejemplo.html
@@ -9,6 +9,9 @@
     background-repeat: no-repeat; 
     background-size: cover; 
 } 
+/*en el efecto parallax lo que se suele hacer es que el fondo se ajuste a su caja y de la
+sensación de permanecer siempre estático en la misma posicion si hacemos scroll en vez de quedarse arriba
+de esa manera damos el efecto concreto,ese efecto de que baja con nosotros.*/
 </style> 
 </head> 
 <body> 
