--- a/DIWEB/bootstrap ejercicios/ej1/index.html
+++ b/DIWEB/bootstrap ejercicios/ej1/index.html
@@ -11,9 +11,9 @@
 <body>
  <div class="container">
           <div class="row">
-          <div class="col-sm-12 col-xs-12" style="background-color: red;min-height: 50px"></div>
-          <div class="col-sm-2 col-xs-12" style="background-color: blue;min-height: 50px"></div>
-          <div class="col-sm-10 col-xs-12" style="background-color: green;min-height: 50px"></div>
+          <div class="col-sm-12 col-xs-12" ></div>
+          <div class="col-sm-2 col-xs-12" ></div>
+          <div class="col-sm-10 col-xs-12" ></div>
       </div>
  </div>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
