--- a/DIWEB/CSS/examen parte 2/index.html
+++ b/DIWEB/CSS/examen parte 2/index.html
@@ -61,7 +61,7 @@
       <article id="home">
         <section>
           <div id="seccionPrimera" class="container">
-            <h1>Servicios de catering <br />para toda ocasión</h1>
+            <h1>SERVICIOS DE CATERING<br />PARA TODA OCASIÓN</h1>
           </div>
         </section>
         <section>
