parche 1.1 las aventuras del cuadrado verde

--- a/animaciones/Square/index.html
+++ b/animaciones/Square/index.html
@@ -30,14 +30,13 @@
                       <td>&uarr;,&larr;,&darr;,&rarr;</td>
                       <td>Te mueves hacia arriba
                           ,izquierda,
-                          abajo e inquierda
+                          abajo e izquierda
                           respectivamente.</td>
                   </tr>
                   
                   <tr>
                       <td>ENTER</td>
-                      <td>Pausas el juego(PD:Si pulsas cualquier otra tecla
-                        de las mencionadas antes reanudas el juego).</td> 
+                      <td>Pausas el juego/Reanudas el juego</td> 
                       
                   </tr>
               </tbody>
