comienzo siguiente actividad

--- a/animaciones/Square/index.html
+++ b/animaciones/Square/index.html
@@ -15,11 +15,12 @@
         }
     </style>
     <body>
-        <h1>JUEGO GAMING</h1>
+        <h3>LAS BIZARRAS AVENTURAS DEL CUADRADO VERDE</h3>
         <canvas id="lienzo" width="600" height="400"> 
             Su navegador no soporta el elemento canvas
           </canvas>
           <!--table>thead>th*2^tbody>tr*5>td*2 extensión de emmet utilizada para esta tabla-->
+          
           <table border width="600px">
               <thead>
                   <th>Tecla</th>
