--- a/animaciones/Actividad animaciones/index.html
+++ b/animaciones/Actividad animaciones/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Animaciones en páginas web</title> 
-    <link rel="stylesheet" href="src/style/stylesheet.css">ç
+    <link rel="stylesheet" href="src/style/stylesheet.css">
     <script src="src/script/script.js"></script>
 </head>
 <body>
-    <iframe src="http://sumtips.com"/>
+    <h1>DO A BARREL ROLL</h1>
+    <p id="ejemplo">Texto de ejemplo</p>
 </body>
 </html>
