--- a/animaciones/Actividad animaciones/index.html
+++ b/animaciones/Actividad animaciones/index.html
@@ -7,7 +7,9 @@
     <script src="src/script/script.js"></script>
 </head>
 <body>
-    <h1>DO A BARREL ROLL</h1>
-    <p id="ejemplo">Texto de ejemplo</p>
+    <h1>DO A BARRELL ROLL</h1>
+    <p id="ejemplo">CUIDAO que llego tarde,pasoooo</p>
+    <p id="sinForma"> <b>¡OFERTA ESPECIAL DE FIN DE AÑO!</b></p>
 </body>
 </html>
+<!---->
